--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,106 +8,311 @@
 
 
     <TextView
-        android:id="@+id/mondayVeiw"
+        android:id="@+id/mondayView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Monday "
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="54dp" />
+        android:layout_marginEnd="18dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/monday"
+        app:layout_constraintBaseline_toBaselineOf="@+id/monBreakButton"
+        app:layout_constraintEnd_toStartOf="@+id/monBreakButton"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tuesdayView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="170dp" />
+        android:layout_marginBottom="11dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/tuesday"
+        app:layout_constraintBottom_toBottomOf="@+id/tuesBreakButton"
+        app:layout_constraintEnd_toStartOf="@+id/tuesBreakButton"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/wednesdayView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="221dp" />
+        android:layout_marginBottom="33dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/wednesday"
+        app:layout_constraintBottom_toTopOf="@+id/thursBreakButton"
+        app:layout_constraintEnd_toStartOf="@+id/wednsBreakButton"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/thursdayView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="283dp" />
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/thursday"
+        app:layout_constraintBaseline_toBaselineOf="@+id/thursBreakButton"
+        app:layout_constraintEnd_toStartOf="@+id/thursBreakButton"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/fridayView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="331dp" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/friday"
+        app:layout_constraintBottom_toBottomOf="@+id/friBreakButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/saturdayView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="377dp" />
+        android:layout_marginStart="16dp"
+        android:text="@string/saturday"
+        app:layout_constraintBottom_toBottomOf="@+id/satBreakButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/sundayView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="425dp" />
+        android:layout_marginBottom="33dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/sunday"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/monBreakButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="54dp" />
+        android:layout_marginEnd="2dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/monLunButton"
+        app:layout_constraintEnd_toStartOf="@+id/monLunButton"
+        app:layout_constraintStart_toEndOf="@+id/mondayView" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/monLunButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="54dp" />
+        android:layout_marginTop="19dp"
+        android:text=""
+        app:layout_constraintEnd_toStartOf="@+id/monDinnerButton"
+        app:layout_constraintStart_toEndOf="@+id/monBreakButton"
+        app:layout_constraintTop_toBottomOf="@+id/LunView" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/monDinnerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="295dp"
-        tools:layout_editor_absoluteY="54dp" />
+        android:layout_marginEnd="1dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/monLunButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/monLunButton" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/brekkiView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="@string/breakfast"
+        app:layout_constraintStart_toStartOf="@+id/monBreakButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/LunView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="@string/lunch"
+        app:layout_constraintStart_toStartOf="@+id/monLunButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/dinView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="299dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/dinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/tuesBreakButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/tuesLunButton"
+        app:layout_constraintEnd_toStartOf="@+id/tuesLunButton"
+        app:layout_constraintStart_toEndOf="@+id/tuesdayView" />
+
+    <Button
+        android:id="@+id/wednsBreakButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/wednesdayView"
+        app:layout_constraintEnd_toStartOf="@+id/wednsLunButton"
+        app:layout_constraintStart_toEndOf="@+id/wednesdayView" />
+
+    <Button
+        android:id="@+id/thursBreakButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/thursLunButton"
+        app:layout_constraintEnd_toStartOf="@+id/thursLunButton"
+        app:layout_constraintStart_toEndOf="@+id/thursdayView" />
+
+    <Button
+        android:id="@+id/friBreakButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/friLunButton"
+        app:layout_constraintStart_toStartOf="@+id/satBreakButton" />
+
+    <Button
+        android:id="@+id/satBreakButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="13dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/satLunButton"
+        app:layout_constraintEnd_toStartOf="@+id/satLunButton" />
+
+    <Button
+        android:id="@+id/sunBreakButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="13dp"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/sunLunButton" />
+
+    <Button
+        android:id="@+id/tuesLunButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:text=""
+        app:layout_constraintEnd_toStartOf="@+id/tuesDinnerButton"
+        app:layout_constraintStart_toEndOf="@+id/tuesBreakButton"
+        app:layout_constraintTop_toBottomOf="@+id/monLunButton" />
+
+    <Button
+        android:id="@+id/tuesDinnerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/tuesLunButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tuesLunButton" />
+
+    <Button
+        android:id="@+id/wednsLunButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:text=""
+        app:layout_constraintEnd_toStartOf="@+id/wednsDinnerButton"
+        app:layout_constraintStart_toEndOf="@+id/wednsBreakButton"
+        app:layout_constraintTop_toTopOf="@+id/wednsBreakButton" />
+
+    <Button
+        android:id="@+id/thursLunButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/friLunButton"
+        app:layout_constraintEnd_toStartOf="@+id/thursDinnerButton"
+        app:layout_constraintStart_toEndOf="@+id/thursBreakButton" />
+
+    <Button
+        android:id="@+id/wednsDinnerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/wednsLunButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/wednsLunButton" />
+
+    <Button
+        android:id="@+id/friLunButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/satLunButton"
+        app:layout_constraintStart_toStartOf="@+id/satLunButton" />
+
+    <Button
+        android:id="@+id/satLunButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="11dp"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/sunLunButton"
+        app:layout_constraintEnd_toStartOf="@+id/satDinnerButton" />
+
+    <Button
+        android:id="@+id/sunLunButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="11dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/sunDinnerButton"
+        app:layout_constraintEnd_toStartOf="@+id/sunDinnerButton" />
+
+    <Button
+        android:id="@+id/thursDinnerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/thursLunButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/thursLunButton" />
+
+    <Button
+        android:id="@+id/friDinnerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/friLunButton"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/satDinnerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/satLunButton"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/sunDinnerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="1dp"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
