--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.cteve.myweeklymenu.recipeList">
 
+    <TextView
+        android:id="@+id/breakListView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="58dp"
+        tools:layout_editor_absoluteY="40dp" />
 </android.support.constraint.ConstraintLayout>
