Committing files that allow recipes to be added

--- a/app/src/main/res/menu/recipe_toolbar.xml
+++ b/app/src/main/res/menu/recipe_toolbar.xml
@@ -17,5 +17,8 @@
         android:title="This Weeks Menu"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/action_addRecipe"
+        android:title="ADD"
+        app:showAsAction="always"/>
 
 </menu>
