--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -58,7 +58,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="16dp"
-        android:text="Camera"
+        android:text="Get Text"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/recipeDetails"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dinnerBox"
